--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
+find_package(francor REQUIRED)
 
 add_executable(frank_base 
   src/frank_base.cpp
@@ -31,7 +32,7 @@ target_include_directories(frank_base PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>)
 
-target_link_libraries(frank_base francor-drive-interface)
+target_link_libraries(frank_base francor_drive)
 ament_target_dependencies(frank_base rclcpp std_msgs)
 
 install(TARGETS frank_base
