--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,10 +4,38 @@
 	"name": "FRANCOR ROS2 Base Workspace",
 	"build": {
 		"dockerfile": "Dockerfile",
-		"args": { "VARIANT": "latest" },
+		"args": { "VARIANT": "galactic" },
 	},
-	"runArgs": ["--network=host"],
-	"workspaceMount": "source=${localWorkspaceFolder}/../,target=/opt/ros2_ws/src,type=bind",
-	"workspaceFolder": "/opt/ros2_ws/src/${localWorkspaceFolderBasename}",
-	"extensions": ["ms-vscode.cpptools-extension-pack", "llvm-vs-code-extensions.vscode-clangd", "xaver.clang-format"],
+	"runArgs": [
+		"-it",
+		//"--gpus",
+		//"all",
+		"--net=host",
+		"--env=DISPLAY",
+		// "-e",
+		// "QT_X11_NO_MITSHM=1",
+		"--volume=/tmp/.X11-unix:/tmp/.X11-unix:rw",
+	  ],
+	"workspaceMount": "source=${localWorkspaceFolder}/../,target=/home/user/ros2_ws/src/,type=bind",
+	"workspaceFolder": "/home/user/ros2_ws/src/${localWorkspaceFolderBasename}",
+	"remoteUser": "user",
+	"extensions": [
+	  "ms-vscode.cpptools",
+	  "ms-vscode.cpptools-linux",
+	  "ms-vscode.cmake-tools",
+	  "ms-vscode.cpptools-extension-pack",
+	  "llvm-vs-code-extensions.vscode-clangd", 
+	  "xaver.clang-format",
+	  "ms-python.python",
+	  "ms-azuretools.vscode-docker",
+	  "ms-vscode-remote.remote-containers",
+	  "vscode-icons-team.vscode-icons",
+	  "editorconfig.editorconfig",
+	  "eamodio.gitlens",
+	  "xaver.clang-format",
+	  "streetsidesoftware.code-spell-checker",
+	  "cschlosser.doxdocgen",
+	  "yzhang.markdown-all-in-one",
+	  "streetsidesoftware.code-spell-checker"
+	]
 }
