--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,10 +6,15 @@ on:
 jobs:
   build-package:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: /home/user/ros2_ws/src/
     container: franc0r/ros2-francor-dev:galactic
     steps:
-      - run: |
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Test
+        run: |
           ls
           pwd
-          echo Hello World
-        name: Test
+          echo Test
