--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,15 +6,13 @@ on:
 jobs:
   build-package:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: /home/user/ros2_ws/src/
     container: franc0r/ros2-francor-dev:galactic
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Test
+        path: francor_frank_base
+      - name: Build
         run: |
           ls
           pwd
-          echo Test
+          colcon build
