--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,14 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     container: franc0r/ros2-francor-dev:galactic
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v1
+      - name: Test
         working-directory: ./francor_frank_base
         run: |
           ls
           pwd
-      - name: Build
-        run: |
-          ls
-          pwd
-          colcon build
