--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,5 +11,4 @@ jobs:
       - uses: actions/checkout@v1
       - name: Build
         run: |
-          source /opt/ros/$ROS_DISTRO/setup.bash
-          colcon build
+          /bin/bash -c "source /opt/ros/$ROS_DISTRO/setup.bash && colcon build"
