--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build-package:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     container: franc0r/ros2-francor-dev:galactic
     steps:
       - uses: actions/checkout@v1
